Persistence of investment